# goydus

./: .dockerignore  Dockerfile  bot.py  config.py  paid_users.txt  pyproject.toml  requirements.txt  requirements.txt.txt  tracking_list.txt  users.txt
