[tool.poetry]
name = "telegram-bot"
version = "1.0.0"
description = "Telegram bot for reports"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
aiohttp = "^3.8.6"
requests = "^2.31.0"
telethon = "^1.34.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
